# PySpark-ALS-Recommender

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/: clean_df
models/recommender.model/itemFactors/: .part-00000-0604e453-d6d8-4a05-898e-4930db930efb-c000.snappy.parquet.crc  .part-00000-19ab241d-78d6-4522-8fe4-ac4a654ac57b-c000.snappy.parquet.crc  .part-00000-f0aa5ec8-cd28-4ed9-941f-b066170e488a-c000.snappy.parquet.crc  .part-00001-0604e453-d6d8-4a05-898e-4930db930efb-c000.snappy.parquet.crc  .part-00001-19ab241d-78d6-4522-8fe4-ac4a654ac57b-c000.snappy.parquet.crc  .part-00001-f0aa5ec8-cd28-4ed9-941f-b066170e488a-c000.snappy.parquet.crc  .part-00002-0604e453-d6d8-4a05-898e-4930db930efb-c000.snappy.parquet.crc  .part-00002-19ab241d-78d6-4522-8fe4-ac4a654ac57b-c000.snappy.parquet.crc  .part-00002-f0aa5ec8-cd28-4ed9-941f-b066170e488a-c000.snappy.parquet.crc  .part-00003-0604e453-d6d8-4a05-898e-4930db930efb-c000.snappy.parquet.crc  .part-00003-19ab241d-78d6-4522-8fe4-ac4a654ac57b-c000.snappy.parquet.crc  .part-00003-f0aa5ec8-cd28-4ed9-941f-b066170e488a-c000.snappy.parquet.crc  .part-00004-0604e453-d6d8-4a05-898e-4930db930efb-c000.snappy.parquet.crc  .part-00004-19ab241d-78d6-4522-8fe4-ac4a654ac57b-c000.snappy.parquet.crc  (+46 more)
models/recommender.model/metadata/: .part-00000.crc  (+1 more)
notebooks/: eda.ipynb  sparkml.ipynb
py_files/: eda.ipynb  eda.py  main.py  model_export.py  recommender.py  sparkml.ipynb  sparkml.py  work_df.parquet
py_files/outputs/: recommend_readers
src/: eda.py  generate.py  main.py  model_export.py  oldmain.py  recommend.py  sparkml.py
(+264 files in other folders)
