[tool.poetry]
name = "spark final"
version = "0.1.0"
description = "Final Project files for Big Data Management and Systems"
authors = ["Peter Fiee <peterfiee@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.0"
dask = {extras = ["distributed"], version = "^2023.4.0"}
fastparquet = "^2023.2.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
jupyterlab = "^3.6.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
